# skindler

./: .gitignore  README.md  pyproject.toml
skindler/: __init__.py  dataset.py  utils.py
skindler/attackers/: __init__.py  attack_bleuer.py  attacker.py  gradient_guided_brute_force.py  gradient_guided_strategy.py  mbart_updated_input.py  mbart_updated_latent.py  ner_attack.py  prefix_gradient_attack.py  synthetic_attack.py
skindler/commands/: attack.py  attack_bleuer.py  get_bleuer_dataset.py  get_dataset.py  get_metrics.py  gradient_attack.py  train.py  validate.py
skindler/configs/attacks/: bleuer.jsonnet  gradient_attack.jsonnet  gradient_attack_brute_force.jsonnet  gradient_attack_constraint_lm.jsonnet  mbart_gradient_update_input_attack.jsonnet  mbart_gradient_update_latent_attack.jsonnet  ner_attack.jsonnet  prefix_gradient_attack.jsonnet  synthetic_attack.jsonnet
skindler/data/: ner_examples.json
skindler/models/: __init__.py  autoencoder.py  bleuer.py  gradient_guided_strategy.py  mbart_bertscorer.py
skindler/modules/: gradient_guided_utils.py  metrics.py  utils.py
