[tool.poetry]
name = "skindler"
version = "0.1.0"
description = ""
authors = ["i.fursov <i.fursov@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
datasets = "^1.8.0"
transformers = "^4.8.1"
torch = "^1.9.0"
typer = "^0.3.2"
nltk = "^3.6.2"
sentencepiece = "^0.1.96"
pytorch-lightning = "^1.3.7"
python-Levenshtein = "^0.12.2"
sacrebleu = "1.5.1"
bert-score = "0.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
